problems occur fetching news to ui

--- a/src/app/news/news-show/news-show.component.html
+++ b/src/app/news/news-show/news-show.component.html
@@ -1,1 +1,5 @@
-<p>news-show works!</p>
+<div>
+  <h2>{{ articles[0].title }}</h2>
+  <span>{{ articles[0].author }}</span>
+  <p>{{ artcles[0].description }}</p>
+</div>
